KJHH-2341 bump springboot version, remove commons-io