@@ -11,7 +11,6 @@ import java.util.List;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutionException;
 
-import org.apache.commons.io.IOUtils;
 import org.springframework.stereotype.Component;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -158,7 +157,7 @@ public class VtjMuutostietoClientImpl implements VtjMuutostietoClient {
             } else if (!res.httpResponse().isSuccessful()) {
                 String errorMessage = "unsuccessful request (status " + res.httpResponse().statusCode() + ") to " + request.getUri();
                 if (res.responseBody().isPresent()) {
-                    log.error(errorMessage + ". response body was: " + IOUtils.toString(res.responseBody().get(), StandardCharsets.UTF_8));
+                    log.error(errorMessage + ". response body was: " + new String(res.responseBody().get().readAllBytes(), StandardCharsets.UTF_8));
                 } else {
                     log.error(errorMessage);
                 }
